--- a/app/views/dimensions_report_mailer/report_email.html.erb
+++ b/app/views/dimensions_report_mailer/report_email.html.erb
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <p><%= @report[:headers][:@reporting_message] %></p>
+  <p><%= @report[:headers][:reporting_message] %></p>
   <p><%= @report[:headers][:admin_set] %></p>
   <p><%= @report[:headers][:total_publications] %></p>
 
