rubocop, renaming some stuff, updating preview class

--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -1,4 +1,4 @@
-<!-- app/views/dimensions_@report_mailer/report_email.html.erb -->
+<!-- app/views/dimensions_report_mailer/dimensions_report_email.html.erb -->
 <!DOCTYPE html>
 <html>
 <head>
