Update link to match new library site

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
             <li><%= link_to t('hyrax.links.help'), "https://blogs.lib.unc.edu/cdr" %></li>
             <li><%= link_to t('hyrax.links.contact'), "https://blogs.lib.unc.edu/cdr/index.php/contact-us" %></li>
             <li><%= link_to t('hyrax.links.library_home'), "https://library.unc.edu" %></li>
-            <li><%= link_to t('hyrax.links.privacy_policy'), "https://library.unc.edu/privacy-policy" %></li>
+            <li><%= link_to t('hyrax.links.privacy_policy'), "https://library.unc.edu/policies/privacy-policy/" %></li>
             <li><%= link_to t('hyrax.links.accessibility'), "https://digitalaccess.unc.edu/report" %></li>
           </ul>
         </div>
