removing configuration stuff and debug logs, moving dimensions ingest in mailer test, adding host to url interpolation

--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -50,7 +50,7 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th>ID</th>
+        <th>Dimensions ID</th>
         <th>URL</th>
         <th>PDF Attached</th>
       </tr>
@@ -72,7 +72,7 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th>ID</th>
+        <th>Dimensions ID</th>
         <th>Error</th>
       </tr>
     </thead>
