updating column title

--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -28,7 +28,7 @@
     <thead>
       <tr>
         <th>Title</th>
-        <th>ID</th>
+        <th>Dimensions ID</th>
         <th>URL</th>
         <th>PDF Attached</th>
       </tr>
