--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -16,6 +16,21 @@
     th {
       background-color: #f2f2f2;
     }
+    .title-col {
+      width: 30%;
+    }
+    .id-col {
+      width: 20%;
+    }
+    .url-col {
+      width: 30%;
+    }
+    .pdf-col {
+      width: 5%;
+    }
+    .error-col {
+      width: 15%;
+    }
   </style>
 </head>
 <body>
@@ -27,19 +42,21 @@
   <table>
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Dimensions ID</th>
-        <th>URL</th>
-        <th>PDF Attached</th>
+        <th class="title-col">Title</th>
+        <th class="id-col">Dimensions ID</th>
+        <th class="url-col">URL</th>
+        <th class="pdf-col">PDF Attached</th>
+        <th class="error-col">Error</th>
       </tr>
     </thead>
     <tbody>
       <% @report[:successfully_ingested_rows].each do |publication| %>
         <tr>
-          <td><%= publication[:title] %></td>
-          <td><%= publication[:id] %></td>
-          <td><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
-          <td><%= publication[:pdf_attached] %></td>
+          <td class="title-col"><%= publication[:title] %></td>
+          <td class="id-col"><%= publication[:id] %></td>
+          <td class="url-col"><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
+          <td class="pdf-col"><%= publication[:pdf_attached] %></td>
+          <td class="error-col">N/A</td>
         </tr>
       <% end %>
     </tbody>
@@ -49,19 +66,21 @@
   <table>
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Dimensions ID</th>
-        <th>URL</th>
-        <th>PDF Attached</th>
+        <th class="title-col">Title</th>
+        <th class="id-col">Dimensions ID</th>
+        <th class="url-col">URL</th>
+        <th class="pdf-col">PDF Attached</th>
+        <th class="error-col">Error</th>
       </tr>
     </thead>
     <tbody>
       <% @report[:marked_for_review_rows].each do |publication| %>
         <tr>
-          <td><%= publication[:title] %></td>
-          <td><%= publication[:id] %></td>
-          <td><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
-          <td><%= publication[:pdf_attached] %></td>
+          <td class="title-col"><%= publication[:title] %></td>
+          <td class="id-col"><%= publication[:id] %></td>
+          <td class="url-col"><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
+          <td class="pdf-col"><%= publication[:pdf_attached] %></td>
+          <td class="error-col">N/A</td>
         </tr>
       <% end %>
     </tbody>
@@ -71,17 +90,21 @@
   <table>
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Dimensions ID</th>
-        <th>Error</th>
+        <th class="title-col">Title</th>
+        <th class="id-col">Dimensions ID</th>
+        <th class="url-col">URL</th>
+        <th class="pdf-col">PDF Attached</th>
+        <th class="error-col">Error</th>
       </tr>
     </thead>
     <tbody>
       <% @report[:failed_to_ingest_rows].each do |publication| %>
         <tr>
-          <td><%= publication[:title] %></td>
-          <td><%= publication[:id] %></td>
-          <td><%= publication[:error] %></td>
+          <td class="title-col"><%= publication[:title] %></td>
+          <td class="id-col"><%= publication[:id] %></td>
+          <td class="url-col">N/A</td>
+          <td class="pdf-col">N/A</td>
+          <td class="error-col"><%= publication[:error] %></td>
         </tr>
       <% end %>
     </tbody>
