--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -12,11 +12,11 @@
   <table style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Title</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Dimensions ID</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">URL</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">PDF Attached</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Error</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">Title</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
       </tr>
     </thead>
     <tbody>
@@ -36,11 +36,11 @@
   <table style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Title</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Dimensions ID</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">URL</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">PDF Attached</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Error</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">Title</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
       </tr>
     </thead>
     <tbody>
@@ -60,11 +60,11 @@
   <table style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Title</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Dimensions ID</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">URL</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">PDF Attached</th>
-        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2;">Error</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">Title</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
       </tr>
     </thead>
     <tbody>
