add date range to email, specify if job is automated or not. modify test suite

--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -5,6 +5,7 @@
 </head>
 <body>
   <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:reporting_message] %></p>
+  <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:date_range] %></p>
   <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:admin_set] %></p>
   <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:total_publications] %></p>
 
