HYC-1950 - Dimensions Ingest Failed Downloads QA (#1111)
* encode pdf url to handle non ascii

* retrieve pdfs from wiley library api for certain ingest urls

* conditional for wiley publications

* make reports include pdf linkout, specified error message for potential rate limiting from wiley

* typo and test for fetching from wiley library url

* tests for pdfs retrieved with wiley library api

* mock env variables for dimensions ingest service tests

* pr changes to logging and report html

* pr changes: remove instance variable, introduce delays betweeen downloads

* linting

* setting article depositor

* updating tests, fixing syntax

* pr changes: delay time and static depositor onyen

* syntax

* using config instead of env variables, assume api url content types are valid

* check depositors in ingest service spec

* remove deduplication, modify query for testing

* smaller sample for manual testing, more robust logs for the ingest helper and service

* testing a mixed sample again

* reintroduce deduplication, remove comments

* update ingest service test

* logging, deduplication toggle for testing

* removing hardcoded sample

* removing debug logs

* add config argument

* addressing text rendering issues in email

* alternate value for nil linkout

--- a/app/views/dimensions_report_mailer/dimensions_report_email.erb
+++ b/app/views/dimensions_report_mailer/dimensions_report_email.erb
@@ -17,6 +17,7 @@
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Link</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
       </tr>
     </thead>
@@ -27,6 +28,14 @@
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:id] %></td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:pdf_attached] %></td>
+          <!-- Render PDF Link Text Conditionally -->
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">
+            <% if publication[:linkout].blank? %>
+              N/A
+            <% else %>
+              <a href="<%= publication[:linkout].gsub('"', '\"') %>">Link</a>
+            <% end %>
+          </td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">N/A</td>
         </tr>
       <% end %>
@@ -41,6 +50,7 @@
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Link</th>
         <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
       </tr>
     </thead>
@@ -51,6 +61,14 @@
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:id] %></td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">N/A</td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">N/A</td>
+          <!-- Render PDF Link Text Conditionally -->
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">
+            <% if publication[:linkout].blank? %>
+              N/A
+            <% else %>
+              <a href="<%= publication[:linkout].gsub('"', '\"') %>">Link</a>
+            <% end %>
+          </td>
           <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:error] %></td>
         </tr>
       <% end %>
