--- a/app/views/hyrax/artworks/_attribute_rows.html.erb
+++ b/app/views/hyrax/artworks/_attribute_rows.html.erb
@@ -1,5 +1,5 @@
 <%= presenter.attribute_to_html(:creator_display, label: 'Creator', render_as: :person, html_dl: true) %>
-<%= presenter.attribute_to_html(:abstract, html_dl: true) %>
+<%= presenter.attribute_to_html(:abstract, render_as: :formatted_text, render_as: :formatted_text, html_dl: true) %>
 <%= presenter.attribute_to_html(:description, html_dl: true) %>
 <%= presenter.attribute_to_html(:date_issued, html_dl: true, label: "Date of publication") %>
 <%= presenter.attribute_to_html(:note, html_dl: true) %>
