--- a/app/views/hyrax/data_sets/_attribute_rows.html.erb
+++ b/app/views/hyrax/data_sets/_attribute_rows.html.erb
@@ -1,8 +1,8 @@
 <%= presenter.attribute_to_html(:last_modified_date, render_as: :date, html_dl: true) %>
 <%= presenter.attribute_to_html(:creator_display, label: 'Creator', render_as: :person, html_dl: true) %>
 <%= presenter.attribute_to_html(:contributor_display, label: 'Contributor', render_as: :person, html_dl: true) %>
-<%= presenter.attribute_to_html(:abstract, html_dl: true) %>
-<%= presenter.attribute_to_html(:methodology, html_dl: true) %>
+<%= presenter.attribute_to_html(:abstract, render_as: :formatted_text, html_dl: true) %>
+<%= presenter.attribute_to_html(:methodology,  render_as: :formatted_text, html_dl: true) %>
 <%= presenter.attribute_to_html(:date_issued, html_dl: true, label: "Date of publication") %>
 <%= presenter.attribute_to_html(:keyword, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted, html_dl: true) %>
