--- a/app/views/records/edit_fields/_methodology.html.erb
+++ b/app/views/records/edit_fields/_methodology.html.erb
@@ -1,5 +1,7 @@
 <% if f.object.multiple? key %>
-  <%= f.input :methodology, as: :multi_value, input_html: { rows: '14', type: 'textarea'}, required: f.object.required?(key) %>
+  <%= f.input :methodology, as: :multi_value, input_html: { rows: '14', type: 'textarea', class: 'tinymce' }, required: f.object.required?(key) %>
 <% else %>
-  <%= f.input :methodology, as: :text, input_html: { rows: '14' }, required: f.object.required?(key) %>
+  <%= f.input :methodology, as: :text, input_html: { rows: '14', class: 'tinymce' }, required: f.object.required?(key) %>
 <% end %>
+<!-- [hyc-override] Include JS for TinyMCE with rich_text configuration. Enables rich text editing. -->
+<%= tinymce :rich_text %>
