--- a/app/components/blacklight/facet_field_pagination_component.html.erb
+++ b/app/components/blacklight/facet_field_pagination_component.html.erb
@@ -20,7 +20,6 @@
     <% surrounding_pages = 4 %> 
     <!-- Page Numbers -->
     <% (1..total_pages).each do |page| %>
-      <% page_display = number_with_delimiter(page) %>
     <!-- Display pages within +/-4 of the current page, always show the first and last two pages  -->
       <% within_range = (page >= current_page - surrounding_pages && page <= current_page + surrounding_pages) %> 
       <% show_page = (
@@ -34,7 +33,7 @@
           <% if page == current_page %>
             <span class="page-link" aria-label="Current Page, Page <%= page %>" aria-current="true"><%= page %></span>
           <% else %>
-            <%= helpers.link_to_specific_page @facet_field.paginator, "Page: #{page}", page.to_i, class: "page-link" %>
+            <%=  helpers.link_to_specific_page @facet_field.paginator,"#{page}", page.to_i, params: @facet_field.search_state.to_h.merge(page: page, 'facet.page' => page), class: "page-link" %>
           <% end %>
         </li>
         <!-- Render ellipsis for pages that would be just outside of the range (3,last page - 2) if they aren't show pages -->
