--- a/app/components/blacklight/facet_field_pagination_component.html.erb
+++ b/app/components/blacklight/facet_field_pagination_component.html.erb
@@ -10,11 +10,10 @@
 
    <!-- [hyc-override] Pagination using `Blacklight::Solr::FacetPaginator`  -->
   <ul class="pagination">
-    <% total_items = @facet_field.paginator.instance_variable_get(:@all).size %>
     <% limit = @facet_field.paginator.instance_variable_get(:@limit) %>
     <% offset = @facet_field.paginator.instance_variable_get(:@offset) %>
     <% current_page = (offset / limit) + 1 %>
-    <% total_pages = (total_items.to_f / limit).ceil %>
+    <% total_pages = (@total_unique_facets.to_f / limit).ceil %>
     <% first_pages_count = 2 %> 
     <% last_pages_count = 2 %> 
     <% surrounding_pages = 4 %> 
@@ -33,7 +32,7 @@
           <% if page == current_page %>
             <span class="page-link" aria-label="Current Page, Page <%= page %>" aria-current="true"><%= page %></span>
           <% else %>
-            <%=  helpers.link_to_specific_page @facet_field.paginator,"#{page}", page.to_i, @facet_total_count, params: @facet_field.search_state.to_h.merge(page: page, 'facet.page' => page), class: "page-link" %>
+            <%=  helpers.link_to_specific_page @facet_field.paginator,"#{page}", page.to_i, @total_unique_facets, params: @facet_field.search_state.to_h.merge(page: page, 'facet.page' => page), class: "page-link" %>
           <% end %>
         </li>
         <!-- Render ellipsis for pages that would be just outside of the range (3,last page - 2) if they aren't show pages -->
