--- a/app/components/blacklight/facet_field_pagination_component.html.erb
+++ b/app/components/blacklight/facet_field_pagination_component.html.erb
@@ -17,7 +17,6 @@
     <% first_pages_count = 2 %> 
     <% last_pages_count = 2 %> 
     <% surrounding_pages = 4 %> 
-    <% Rails.logger.info("Limit: #{limit}, Offset: #{offset}, Total Pages: #{total_pages}, Total Unique Facets: #{@total_unique_facets}")%>
     <!-- Page Numbers -->
     <% (1..total_pages).each do |page| %>
     <!-- Display pages within +/-4 of the current page, always show the first and last two pages  -->
@@ -33,7 +32,7 @@
           <% if page == current_page %>
             <span class="page-link" aria-label="Current Page, Page <%= page %>" aria-current="true"><%= page %></span>
           <% else %>
-            <%=  helpers.link_to_specific_page @facet_field.paginator, page, @total_unique_facets, params: @facet_field.search_state.to_h.merge(page: page, 'facet.page' => page), class: "page-link" %>
+            <%=  helpers.link_to_specific_page @facet_field.paginator, page.to_i, @total_unique_facets, params: @facet_field.search_state.to_h.merge(page: page, 'facet.page' => page), class: "page-link" %>
           <% end %>
         </li>
         <!-- Render ellipsis for pages that would be just outside of the range (3,last page - 2) if they aren't show pages -->
