--- a/app/components/blacklight/facet_field_pagination_component.html.erb
+++ b/app/components/blacklight/facet_field_pagination_component.html.erb
@@ -13,7 +13,7 @@
     <% limit = @facet_field.paginator.instance_variable_get(:@limit) %>
     <% offset = @facet_field.paginator.instance_variable_get(:@offset) %>
     <% current_page = (offset / limit) + 1 %>
-    <% total_pages = (@total_unique_facets.to_f / limit).ceil %>
+    <% total_pages = @total_unique_facets ? (@total_unique_facets.to_f / limit).ceil : 0 %>
     <% first_pages_count = 2 %> 
     <% last_pages_count = 2 %> 
     <% surrounding_pages = 4 %> 
