--- a/app/views/records/edit_fields/_abstract.html.erb
+++ b/app/views/records/edit_fields/_abstract.html.erb
@@ -1,7 +1,8 @@
 <% if f.object.multiple? key %>
-    <%= f.input :abstract, as: :multi_value, input_html: { rows: '14', type: 'textarea', id: "abstract-#{SecureRandom.random_number(100)}", class: 'tinymce'}, required: f.object.required?(key) %>
+    <%= f.input :abstract, as: :multi_value, input_html: { rows: '14', type: 'textarea', class: 'tinymce'}, required: f.object.required?(key) %>
 <% else %>
     <%= f.input :abstract, as: :text, input_html: { rows: '14', class: 'tinymce' }, required: f.object.required?(key) %>
 <% end %>
+<%= f.input :abstract, as: :multi_value, input_html: { rows: '14', type: 'textarea', id: 'article-1' class: 'tinymce'}, required: f.object.required?(key) %>
 <!-- [hyc-override] Include JS for TinyMCE with rich_text configuration. Enables rich text editing. -->
 <%= tinymce :rich_text %>
