Add google site verification snippet

--- a/app/views/_head_tag_extras.html.erb
+++ b/app/views/_head_tag_extras.html.erb
@@ -1,5 +1,6 @@
 <%# Override this partial in your application to insert extra HEAD content into every page %>
 <meta name="msvalidate.01" content="6963C16215285DFB9641BD17E441FAAE"/>
+<meta name="google-site-verification" content="WO17zKdoDATg4FxnQafjjRNowoM-TDP4hEfb_H--mdo" />
 
 <% if @presenter && ENV['NOINDEX'] && @presenter.is_a?(Hyrax::WorkShowPresenter) && ENV['NOINDEX'].split('|').include?(@presenter.id) %>
 <meta name="robots" content="noindex" />
