--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -6,9 +6,57 @@
   <meta charset="UTF-8">
 </head>
 <body>
-    <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:reporting_message] %></p>
-    <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:depositor] %></p>
-    <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:total_unique_files] %></p>
-    <p style="font-size: 16px; margin-bottom: 10px;"><%= @report[:headers][:successfully_attached] %></p>
+  <p style="font-size: 16px; margin-bottom: 10px;">
+    <%= @report[:headers][:reporting_message] %>
+  </p>
+
+  <p style="font-size: 16px; margin-bottom: 10px;">
+    <strong>Depositor:</strong> <%= @report[:headers][:depositor] %>
+  </p>
+
+  <p style="font-size: 16px; margin-bottom: 10px;">
+    <strong>Total Unique Files:</strong> <%= @report[:headers][:total_unique_files] %>
+  </p>
+
+  <p style="font-size: 16px; margin-bottom: 10px;">
+    <strong>Successfully Attached:</strong> <%= @report[:headers][:successfully_attached] %>
+  </p>
+
+  <p style="font-size: 16px; margin-bottom: 10px;">
+    <strong>Successfully Ingested:</strong> <%= @report[:headers][:successfully_ingested] %>
+  </p>
+
+<h2 style="font-size: 20px; margin-bottom: 10px;"><%= @report[:records][:successfully_attached] %></h2>
+  <table style="width: 100%; border-collapse: collapse;">
+    <thead>
+      <tr>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">Title</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 20%;">Dimensions ID</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 30%;">URL</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Attached</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 5%;">PDF Link</th>
+        <th style="border: 2px solid #dddddd; text-align: left; padding: 10px; background-color: #f2f2f2; width: 15%;">Error</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @report[:successfully_ingested_rows].each_with_index do |publication, index| %>
+        <tr style="background-color: <%= index.even? ? '#f9f9f9' : '#ffffff' %>;">
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:title] %></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:id] %></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><a href="<%= publication[:url] %>"><%= publication[:url] %></a></td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;"><%= publication[:pdf_attached] %></td>
+          <!-- Render PDF Link Text Conditionally -->
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">
+            <% if publication[:linkout].blank? %>
+              N/A
+            <% else %>
+              <a href="<%= publication[:linkout].gsub('"', '\"') %>">Link</a>
+            <% end %>
+          </td>
+          <td style="border: 2px solid #dddddd; text-align: left; padding: 10px;">N/A</td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </body>
 </html>
