adding missed header

--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -26,6 +26,10 @@
     <strong>Successfully Ingested:</strong> <%= @report[:headers][:successfully_ingested] %>
   </p>
 
+   <p style="font-size: 16px; margin-bottom: 10px;">
+    <strong>Target Directory:</strong> <%= @report[:headers][:target_directory] %>
+  </p>
+
 <h2 style="font-size: 20px; margin-bottom: 10px;"><%= @report[:records][:successfully_attached] %></h2>
   <table style="width: 100%; border-collapse: collapse;">
     <thead>
