add missing category

--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -23,6 +23,7 @@
 <!-- Generate tables for each record category -->
 <% {
   successfully_attached: 'Successfully Attached',
+  successfully_ingested: 'Successfully Ingested',
   skipped: 'Skipped',
   failed: 'Failed'
 }.each do |key, label| %>
