total count fix

--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -13,7 +13,7 @@
 </p>
 
 <p style="font-size: 16px; margin-bottom: 10px;">
-  <strong>Total Unique Files: </strong><%= @report[:headers][:total] %>
+  <strong>Total Unique Files: </strong><%= @report[:headers][:total_files] %>
 </p>
 
 <!-- Generate tables for each record category -->
