--- a/app/views/hyrax/file_sets/media_display/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_video.html.erb
@@ -1,15 +1,10 @@
 <%# [hyc-override] https://github.com/samvera/hyrax/tree/hyrax-v4.0.0/app/views/hyrax/file_sets/media_display/_video.html.erb %>
 <%
-  # Pull size from Solr/document metadata
+  # [hyc-override] Pull size from Solr/document metadata
   file_size_bytes = file_set.solr_document['file_size_lts'].to_i    
   file_size_mb    = (file_size_bytes / 1.megabyte.to_f).round(2)
-
-  # WIP: Testing limit of 1MB, but 6MB for production
-  show_video = file_size_bytes < 6.megabytes
-
-  Rails.logger.info "[VIDEO] File size (bytes): #{file_size_bytes}"
-  Rails.logger.info "[VIDEO] File size (MB): #{file_size_mb}"
-  Rails.logger.info "[VIDEO] Eligible for video preview? #{show_video}"
+  # [hyc-override] Show video only if file size is less than or equal to 500MB, since that's our max upload size
+  show_video = file_size_bytes =< 500.megabytes
 %>
 
 <% if display_media_download_link?(file_set: file_set) %>
