more descriptive title

--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -23,7 +23,7 @@
 
 <!-- Generate tables for each record category -->
 <% {
-  successfully_attached: 'Successfully Attached',
+  successfully_attached: 'Successfully Ingested and Attached',
   successfully_ingested: 'Successfully Ingested',
   skipped: 'Skipped',
   failed: 'Failed'
