--- a/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
+++ b/app/views/pubmed_report_mailer/pubmed_report_email.html.erb
@@ -38,7 +38,7 @@
 }.each do |key, label| %>
 
   <h2 style="font-size: 20px; margin-bottom: 10px; margin-top: 30px;">
-    <%= label %>: <%= @report[:records][key].size %> Files
+    <%= label %>: <%= @report[:records][key].size %> Records
   </h2>
 
   <table style="width: 100%; border-collapse: collapse;">
